# mm-router-lab

./: README.md  pyproject.toml
examples/: templates.json
src/mm_router_lab/: __init__.py  cli.py  router.py  templates.py
